--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <a href="/">
           <img src="img/logo.png" alt="{{ site.title }}">
           <div id="claim">
-            あなたが横浜市に納めた税金がどこで使われているかをお示しします
+            あなたが読谷村に納めた税金がどこで使われているかをお示しします
           </div>
         </a>
       </div>
@@ -65,7 +65,7 @@
     <div class="inner">
       <div class="container">
         <p>
-          Where Does My Money Go? (日本語版 ver.1.0.) は、イギリスの Open Knowledge Foundation が開発した Where Does My Money Go? (英語版) をベースに開発されています。使われているデータは横浜市財政局財政課が作成している平成24年度一般会計予算のデータをもとにしています。Where Does My Money Go? プロジェクトは、公共データのオープン化を進める有志に支えられています。</p>
+          Where Does My Money Go? (日本語版 ver.1.0.) は、イギリスの Open Knowledge Foundation が開発した Where Does My Money Go? (英語版) をベースに開発されています。使われているデータは沖縄県企画部市町村課が掲載している平成23年度　財政状況資料集のデータをもとにしています。Where Does My Money Go? プロジェクトは、公共データのオープン化を進める有志に支えられています。</p>
 
         <ul class="footer-links span4 pull-left">
           <li><a href="http://wheredoesmymoneygo.org">Where Does My Money Go?</a></li>
